--- a/readme
+++ b/readme
@@ -1,11 +1,13 @@
 # Modbus TCP Proxy - Git Repository and Installation Guide
 
 ## Overview
+
 This repository contains a Python-based Modbus TCP Proxy script that acts as a bridge between multiple clients and a single Modbus TCP server. It serializes requests to avoid cross-messaging and ensures smooth communication.
 
 ---
 
 ## Features
+
 - Supports configuration via `config.yaml`
 - Handles multiple clients with serialized requests
 - Adjustable server settings, including timeouts and delays
@@ -14,7 +16,9 @@ This repository contains a Python-based Modbus TCP Proxy script that acts as a b
 ---
 
 ## Prerequisites
+
 Ensure the following are installed on your Debian system:
+
 - Python 3.8 or newer
 - `pip` package manager
 - `virtualenv` (optional but recommended for isolated environments)
@@ -24,23 +28,27 @@ Ensure the following are installed on your Debian system:
 ## Installation Guide
 
 ### Clone the Repository
+
 ```bash
-git clone https://github.com/Xerolux/Modbus-Tcp-Proxy.git
-cd Modbus-Tcp-Proxy
+git clone https://github.com/Xerolux/Modbus-Tcp-Proxy.git /opt/Modbus-Tcp-Proxy
+cd /opt/Modbus-Tcp-Proxy
 ```
 
 ### Create and Activate a Virtual Environment (Optional)
+
 ```bash
 python3 -m venv venv
 source venv/bin/activate
 ```
 
 ### Install Python Dependencies
+
 ```bash
 pip install -r requirements.txt
 ```
 
 ### Set Up the Configuration File
+
 1. Copy the example configuration file:
    ```bash
    cp config.example.yaml config.yaml
@@ -59,6 +67,7 @@ pip install -r requirements.txt
    ```
 
 ### Run the Proxy Script
+
 ```bash
 python modbus_tcp_proxy.py
 ```
@@ -66,6 +75,7 @@ python modbus_tcp_proxy.py
 ---
 
 ## Automated Installation Script
+
 Save the following script as `install.sh` in the repository root.
 
 ```bash
@@ -77,8 +87,8 @@ sudo apt install -y python3 python3-pip python3-venv git
 
 # Clone the repository
 echo "Cloning repository..."
-git clone https://github.com/Xerolux/Modbus-Tcp-Proxy.git
-cd Modbus-Tcp-Proxy
+git clone https://github.com/Xerolux/Modbus-Tcp-Proxy.git /opt/Modbus-Tcp-Proxy
+cd /opt/Modbus-Tcp-Proxy
 
 # Create virtual environment
 python3 -m venv venv
@@ -98,8 +108,8 @@ Description=Modbus TCP Proxy Service
 After=network.target
 
 [Service]
-ExecStart=/usr/bin/python3 /path/to/Modbus-Tcp-Proxy/modbus_tcp_proxy.py
-WorkingDirectory=/path/to/Modbus-Tcp-Proxy
+ExecStart=/usr/bin/python3 /opt/Modbus-Tcp-Proxy/modbus_tcp_proxy.py
+WorkingDirectory=/opt/Modbus-Tcp-Proxy
 Restart=always
 User=$USER
 
@@ -114,10 +124,12 @@ sudo systemctl enable modbus_proxy.service
 # Start the service
 sudo systemctl start modbus_proxy.service
 
-echo "\nInstallation complete! Edit 'config.yaml' to configure the proxy and manage the service using systemd."
+echo "
+Installation complete! Edit 'config.yaml' to configure the proxy and manage the service using systemd."
 ```
 
 ### Usage
+
 1. Make the script executable:
    ```bash
    chmod +x install.sh
@@ -130,6 +142,7 @@ echo "\nInstallation complete! Edit 'config.yaml' to configure the proxy and man
 ---
 
 ## Repository Structure
+
 - `modbus_tcp_proxy.py`: Main script for the Modbus TCP Proxy
 - `config.example.yaml`: Example configuration file
 - `requirements.txt`: Python dependencies
@@ -139,10 +152,11 @@ echo "\nInstallation complete! Edit 'config.yaml' to configure the proxy and man
 ---
 
 ## Additional Notes
+
 - Ensure the Modbus server is reachable from the machine running this proxy.
 - The `config.yaml` file must be present in the same directory as `modbus_tcp_proxy.py`.
 - Logs are printed to the console. For production, consider adding logging to a file.
-- Update `/path/to/Modbus-Tcp-Proxy` in the systemd service file with the actual directory path.
+- The repository is installed in `/opt/Modbus-Tcp-Proxy` for consistency.
 
 ---
 
@@ -151,6 +165,7 @@ For issues or suggestions, feel free to create a pull request or open an issue i
 ---
 
 ## requirements.txt
+
 ```plaintext
 pymodbus
 yaml
